BrushUp: rename colors active-inverted-* to selected-*
The term active should only be used for the active pseudo selector
and not for the selected state.

--- a/eclipse-scout-core/src/calendar/YearPanel.less
+++ b/eclipse-scout-core/src/calendar/YearPanel.less
@@ -88,12 +88,12 @@
 
       &.year-range-day {
         background-color: @year-panel-range-day-background-color;
-        color: @active-inverted-color;
+        color: @selected-color;
       }
 
       &.year-hover-day {
         background-color: @year-panel-range-day-background-color;
-        color: @active-inverted-color;
+        color: @selected-color;
       }
     }
   }
