--- a/eclipse-scout-core/src/desktop/viewbutton/ViewMenuPopup.less
+++ b/eclipse-scout-core/src/desktop/viewbutton/ViewMenuPopup.less
@@ -71,8 +71,8 @@
   }
 
   &.checked {
-    color: @active-inverted-color;
-    background-color: @active-inverted-background-color;
+    color: @selected-color;
+    background-color: @selected-background-color;
   }
 
   &.disabled {
@@ -84,7 +84,7 @@
     }
 
     &.checked {
-      background-color: @active-inverted-background-color;
+      background-color: @selected-background-color;
       color: @disabled-inverted-color;
     }
   }
