--- a/eclipse-scout-core/src/main.less
+++ b/eclipse-scout-core/src/main.less
@@ -388,18 +388,18 @@ button {
   }
 
   &.selected {
-    color: @active-inverted-color;
-    background-color: @active-inverted-background-color;
-    border-color: @active-inverted-background-color;
+    color: @selected-color;
+    background-color: @selected-background-color;
+    border-color: @selected-background-color;
 
     &:hover {
-      background-color: @active-inverted-hover-background-color;
-      border-color: @active-inverted-hover-background-color;
+      background-color: @selected-hover-background-color;
+      border-color: @selected-hover-background-color;
     }
 
     &.active, &:active {
-      background-color: @active-inverted-active-background-color;
-      border-color: @active-inverted-active-background-color;
+      background-color: @selected-active-background-color;
+      border-color: @selected-active-background-color;
     }
   }
 
