--- a/eclipse-scout-core/src/menu/Menu.less
+++ b/eclipse-scout-core/src/menu/Menu.less
@@ -36,20 +36,20 @@
   }
 
   &.selected {
-    color: @active-inverted-color;
-    background-color: @active-inverted-background-color;
+    color: @selected-color;
+    background-color: @selected-background-color;
 
     &:hover {
-      background-color: @active-inverted-hover-background-color;
+      background-color: @selected-hover-background-color;
     }
 
     &.active, &:active {
-      background-color: @active-inverted-active-background-color;
+      background-color: @selected-active-background-color;
     }
 
     &.has-popup {
       color: @menu-item-color;
-      background-color: @selected-background-color;
+      background-color: @selected-with-popup-background-color;
     }
   }
 
