--- a/eclipse-scout-core/src/style/colors-dark.less
+++ b/eclipse-scout-core/src/style/colors-dark.less
@@ -103,7 +103,7 @@
 /* -------------------------------- */
 
 @boxbutton-background-color: @palette-gray-8;
-@button-active-background-color: @active-inverted-background-color;
+@button-active-background-color: @selected-background-color;
 @button-active-color: @palette-white;
 @button-background-color: transparent;
 @button-border-color: @palette-blue-4;
@@ -132,7 +132,7 @@
 @date-picker-out-color: @calendar-out-color;
 @date-picker-out-weekend-color: @calendar-weekend-out-color;
 @date-picker-weekend-color: @calendar-weekend-color;
-@default-button-background-color: @active-inverted-background-color;
+@default-button-background-color: @selected-background-color;
 @desktop-header-background-color: @palette-gray-4;
 @desktop-header-border-color: @palette-gray-8;
 @desktop-notification-background-color: @palette-gray-4;
@@ -189,7 +189,7 @@
 @switch-button-background-color: @body-background-color;
 @switch-button-enabled-background-color: darken(@palette-blue-3, 10%);
 @tab-item-color: @text-color;
-@tab-item-focus-color: lighten(@tab-item-active-color, 10%);
+@tab-item-focus-color: lighten(@tab-item-selected-color, 10%);
 @tab-item-marked-border-color: @text-color;
 @table-aggregate-row-background-color: @palette-gray-8;
 @table-compact-cell-content-color: @palette-gray-2;
