BrushUp: optimize hover colors
- slightly lighten hover and active style
- don't use transparent colors which is relevant if element is on top
  of others, e.g. collapse handles
- add minimal styles to dark theme
- fix selected node display style (default is flex not block)
- fix subtitle color in dark theme

--- a/eclipse-scout-core/src/style/colors-dark.less
+++ b/eclipse-scout-core/src/style/colors-dark.less
@@ -60,6 +60,7 @@
 /* -------------------------------- */
 
 @active-color: @palette-blue-1-1;
+@active-background-color: lighten(@hover-background-color, 5%);
 @application-loading-background-color: @body-background-color;
 @application-loading01-color: @palette-blue-1-1;
 @application-loading02-color: @palette-cyan-3;
@@ -76,6 +77,7 @@
 @error-background-color: @background-color;
 @focus-border-color: @focus-color;
 @focus-color: @palette-blue-1-1;
+@hover-background-color: @palette-gray-5;
 @highlight-inverted-background-color: @palette-orange-5;
 @hover-color: @active-color;
 @icon-light-color: @text-color;
@@ -86,6 +88,7 @@
 @item-selection-nonfocus-border-color: @border-color;
 @panel-background-color: @palette-gray-8;
 @popup-background-color: @background-color;
+@sub-title-color: @palette-gray-1;
 @text-color-dark: @palette-black;
 @text-color: @palette-gray-1;
 @text-disabled-color: @disabled-color;
@@ -103,8 +106,6 @@
 /* -------------------------------- */
 
 @boxbutton-background-color: @palette-gray-8;
-@button-active-background-color: @selected-background-color;
-@button-active-color: @palette-white;
 @button-background-color: transparent;
 @button-border-color: @palette-blue-4;
 @button-color: @palette-blue-1-1;
@@ -145,6 +146,7 @@
 @desktop-navigation-body-background-color: @palette-gray-9;
 @desktop-navigation-body-in-background-background-color: @palette-black;
 @desktop-navigation-color: @text-color;
+@desktop-navigation-handle-background-color: @desktop-navigation-body-background-color;
 @notification-error-background-color: @notification-ok-background-color;
 @notification-error-border-color: @error-color;
 @notification-info-background-color: @notification-ok-background-color;
