--- a/eclipse-scout-core/src/tree/Tree.less
+++ b/eclipse-scout-core/src/tree/Tree.less
@@ -250,7 +250,7 @@
       }
 
       &.selected {
-        display: block;
+        display: flex;
         color: @outline-selection-color;
         cursor: default;
       }
