--- a/eclipse-scout-core/src/style/colors.less
+++ b/eclipse-scout-core/src/style/colors.less
@@ -75,7 +75,7 @@
 /* -------------------------------- */
 
 @active-color: @palette-blue-6;
-@active-background-color: fade(@palette-black, 14%);
+@active-background-color: darken(@hover-background-color, 5%);
 @application-loading-background-color: @palette-white;
 @application-loading01-color: fade(@palette-blue-5, 90%);
 @application-loading02-color: @palette-cyan-4;
@@ -106,8 +106,7 @@
 @highlight-color: @palette-orange-4;
 @highlight-inverted-background-color: @highlight-color;
 @hover-color: @palette-blue-6;
-@hover-background-color: fade(@palette-black, 8%);
-@hover-intense-background-color: fade(@palette-black, 20%);
+@hover-background-color: @palette-gray-3;
 @icon-color: @text-color;
 @icon-disabled-color: @palette-gray-5;
 @icon-inverted-color: @palette-white;
@@ -473,11 +472,11 @@
 @view-tab-selected-color: @active-color;
 @view-tab-selected-background-color: @desktop-navigation-body-background-color;
 @view-tab-in-background-selected-background-color: @desktop-navigation-body-in-background-background-color;
-@view-tab-hover-background-color: @hover-intense-background-color;
+@view-tab-hover-background-color: fade(@palette-black, 20%);
 @view-menu-tab-hover-background-color: fade(@palette-black, 10%);
 @view-menu-tab-menu-selected-background-color: fade(@palette-black, 20%);
 @view-menu-tab-selected-menu-selected-background-color: @selected-with-popup-background-color;
-@view-menu-tab-background-color: @hover-intense-background-color;
+@view-menu-tab-background-color: @view-tab-hover-background-color;
 @view-menu-tile-background-color: fade(@palette-blue-5, 5%);
 @view-menu-tile-hover-background-color: fade(@palette-blue-5, 10%);
 @view-menu-tile-selected-border-color: @item-selection-border-color;
