BrushUp: icons poc

--- a/eclipse-scout-core/src/desktop/outline/Outline.less
+++ b/eclipse-scout-core/src/desktop/outline/Outline.less
@@ -49,6 +49,8 @@
 
       & > .font-icon {
         line-height: @outline-node-font-icon-line-height;
+        font-size: @outline-node-font-icon-size;
+        color: @icon-light-color;
       }
 
       & > .menubar {
