--- a/eclipse-scout-core/src/style/colors.less
+++ b/eclipse-scout-core/src/style/colors.less
@@ -282,7 +282,7 @@
 @navigate-up-button-color: @button-color;
 @desktop-navigation-background-color: @desktop-header-background-color;
 @desktop-navigation-body-background-color: @palette-white;
-@desktop-navigation-color: @palette-gray-10;
+@desktop-navigation-color: @palette-gray-9;
 @notification-ok-background-color: @palette-green-0;
 @notification-ok-border-color: @palette-green-3;
 @notification-info-background-color: @palette-blue-0;
@@ -303,6 +303,8 @@
 @outline-selection-color: @palette-white;
 @outline-title-color: @palette-blue-6;
 @outline-title-border-color: @border-color;
+@outline-node-control-color: @outline-node-font-icon-color;
+@outline-node-font-icon-color: @icon-light-color;
 @planner-large-scale-item-line-color: fade(@palette-black, 20%);
 @planner-small-scale-item-line-color: fade(@palette-black, 7%);
 @planner-mode-selected-color: @calendar-mode-selected-color;
