--- a/eclipse-scout-core/src/style/sizes.less
+++ b/eclipse-scout-core/src/style/sizes.less
@@ -187,8 +187,8 @@
 @menubar-item-margin-x: 2px;
 @menubar-item-margin-y: 2px;
 @menu-item-height: 39px;
-@menu-item-min-image-icon-width: 18px;
-@menu-item-max-image-icon-height: 18px;
+@menu-item-min-image-icon-width: 16px;
+@menu-item-max-image-icon-height: 16px;
 @menu-item-padding-x: 10px;
 @menu-item-padding-y: 6px;
 @messagebox-label-padding: 20px;
@@ -206,6 +206,7 @@
 @outline-node-control-padding-y: @outline-node-padding-y;
 @outline-node-control-line-height: @tree-node-control-line-height;
 @outline-node-font-icon-line-height: 14px;
+@outline-node-font-icon-size: 16px;
 @outline-node-padding-left: 37px;
 @outline-node-padding-right: 8px;
 @outline-node-padding-y: 9px;
@@ -291,7 +292,8 @@
 @tooltip-menu-padding-y: 5px;
 @tooltip-padding-x: 12px;
 @tooltip-padding-y: 8px;
-@tree-node-bitmap-icon-size: 16px;
+@tree-node-icon-width: 16px;
+@tree-node-bitmap-icon-size: @tree-node-icon-width;
 @tree-node-bitmap-icon-margin-top: -2px;
 @tree-node-checkbox-size: 20px;
 @tree-node-checkbox-margin-top: -2px;
