BrushUp: update table header style
- Header items now have a margin
- Until now, the width of the left and right row border was added
  to the first header item by using a margin. This does not work anymore
  because the header item now already has a margin. Additionally, it
  stayed on the header item after the first column was moved. Now, a
  transparent border on the whole table header is used to correctly
  align the header items with the table cells.
- The header menu is now visually separated from the header item.
- The content style of the header menu was improved a bit
  - Buttons now look like regular buttons.
  - Filter table now looks cleaner.
- The filter fields now get the focus when popup is opened so the user
  can start typing immediately
- The number column now uses autoOptimizeWidth so the first column
  gets as much width as possible

--- a/eclipse-scout-core/src/desktop/DesktopDense.less
+++ b/eclipse-scout-core/src/desktop/DesktopDense.less
@@ -104,8 +104,9 @@
   /* TableHeader.less */
 
   .table-header-item {
-    padding-top: 7px; /* padding: @table-header-padding-top @table-header-padding-right @table-header-padding-bottom @table-header-padding-left; */
-    padding-bottom: 6px;
+    margin-top: 2px; /* margin: @table-header-item-margin-y @table-header-item-margin-x  */
+    margin-bottom: 2px;
+    min-height: 24px; /* min-height: @table-header-item-min-height; */
   }
 
   .table-header-resize {
@@ -140,8 +141,9 @@
   .detail-table.table {
     & > .table-header {
       & > .table-header-item {
-        padding-top: 7px; /* @detail-table-header-padding-y; */
-        padding-bottom: 6px; /* @detail-table-header-padding-y; */
+        margin-top: 2px;
+        margin-bottom: 2px;
+        min-height: 24px;
       }
     }
 
