BrushUp: improve focus style of checkable table
Until now, if a checkable table uses checkableStyle = TABLE_ROW,
a focus indicator is shown on the beginning of the selected row.
This works but does not look very good.
To make it prettier, the table now uses the new possibility to only
visualize the focus marker when the user uses the keyboard. Now, the
focus marker can be replaced by a better visualization which would
be confusing when the user uses a mouse but works well if he uses the
keyboard.

--- a/eclipse-scout-core/src/table/Table.less
+++ b/eclipse-scout-core/src/table/Table.less
@@ -42,11 +42,6 @@
 
     & > .table-data > .table-row {
 
-      & > .table-cell.first {
-        /* Increase padding of first cell to make room for "selection" marker */
-        padding-left: 14px;
-      }
-
       &.selected {
         /* Don't draw selection */
         background-color: transparent;
@@ -68,23 +63,14 @@
       }
     }
 
-    &:focus,
-    &.focused {
+    &.keyboard-navigation:focus,
+    &.keyboard-navigation.focused {
       & > .table-data > .table-row {
         &.selected {
-          /* "Selection" marker */
+          background-color: @hover-background-color;
 
-          &::before {
-            #scout.font-icon();
-            content: @icon-angle-right;
-            position: absolute;
-            top: 8px;
-            left: 5px;
-            color: @text-color;
-          }
-
-          &.checked::before {
-            color: @text-selection-color;
+          &.checked {
+            background-color: @selected-hover-background-color;
           }
         }
       }
